; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_sge.c_free_txq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_sge.c_free_txq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vi_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.adapter* }
%struct.adapter = type { i32 }
%struct.sge_txq = type { i32, i32, i32, %struct.sge_eq }
%struct.sge_eq = type { i32 }

@M_CXGBE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vi_info*, %struct.sge_txq*)* @free_txq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @free_txq(%struct.vi_info* %0, %struct.sge_txq* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vi_info*, align 8
  %5 = alloca %struct.sge_txq*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.adapter*, align 8
  %8 = alloca %struct.sge_eq*, align 8
  store %struct.vi_info* %0, %struct.vi_info** %4, align 8
  store %struct.sge_txq* %1, %struct.sge_txq** %5, align 8
  %9 = load %struct.vi_info*, %struct.vi_info** %4, align 8
  %10 = getelementptr inbounds %struct.vi_info, %struct.vi_info* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.adapter*, %struct.adapter** %12, align 8
  store %struct.adapter* %13, %struct.adapter** %7, align 8
  %14 = load %struct.sge_txq*, %struct.sge_txq** %5, align 8
  %15 = getelementptr inbounds %struct.sge_txq, %struct.sge_txq* %14, i32 0, i32 3
  store %struct.sge_eq* %15, %struct.sge_eq** %8, align 8
  %16 = load %struct.adapter*, %struct.adapter** %7, align 8
  %17 = load %struct.sge_eq*, %struct.sge_eq** %8, align 8
  %18 = call i32 @free_eq(%struct.adapter* %16, %struct.sge_eq* %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %2
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %3, align 4
  br label %39

23:                                               ; preds = %2
  %24 = load %struct.sge_txq*, %struct.sge_txq** %5, align 8
  %25 = getelementptr inbounds %struct.sge_txq, %struct.sge_txq* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @sglist_free(i32 %26)
  %28 = load %struct.sge_txq*, %struct.sge_txq** %5, align 8
  %29 = getelementptr inbounds %struct.sge_txq, %struct.sge_txq* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @M_CXGBE, align 4
  %32 = call i32 @free(i32 %30, i32 %31)
  %33 = load %struct.sge_txq*, %struct.sge_txq** %5, align 8
  %34 = getelementptr inbounds %struct.sge_txq, %struct.sge_txq* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @mp_ring_free(i32 %35)
  %37 = load %struct.sge_txq*, %struct.sge_txq** %5, align 8
  %38 = call i32 @bzero(%struct.sge_txq* %37, i32 16)
  store i32 0, i32* %3, align 4
  br label %39

39:                                               ; preds = %23, %21
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @free_eq(%struct.adapter*, %struct.sge_eq*) #1

declare dso_local i32 @sglist_free(i32) #1

declare dso_local i32 @free(i32, i32) #1

declare dso_local i32 @mp_ring_free(i32) #1

declare dso_local i32 @bzero(%struct.sge_txq*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
